--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^5.3.4",
     "recoil": "^0.7.6",
+    "recoil-persist": "^4.2.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
