--- a/trello-clone/package.json
+++ b/trello-clone/package.json
@@ -12,6 +12,7 @@
     "apexcharts": "^3.37.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.2",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "^18.0.10",
     "@types/react-helmet": "^6.1.6",
     "@types/react-router-dom": "^5.3.3",
